move go code to repository root;add goose migration file

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,32 @@
+# binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# test binary built with `go test -c`
+*.test
+
+# output of the go coverage tool
+*.out
+
+# junk files
 .DS_Store
+
+# force include empty directories
+!.gitkeep
+
+# dotenv
+.env
+.env.*
+!.env.example
+
+# direnv
+.direnv
+
+# local workspace
+go.work*
+
+# tmp
+tmp
